# emb_basic_sdk

./: CHANGELOG.md  CMakeLists.txt  README.md
include/has_platform/: has_common.h  has_datatype.h  has_errno.h  has_log.h  has_mq.h  has_os.h  has_thread.h
include/has_platform/linux/: has_mq_platform.h  has_os_platform.h  has_thread_platform.h
platform/linux/: has_log.cc  has_mq.c  has_os.c  has_thread.c
test/: has_log_unittest.cc  has_mq_unittest.cc  has_os_unittest.cc  has_thread_unittest.cc
